fix for sonarqube and java 11. Coverage is not yet optimal.